force-app/main/default/objects/Contact/fields/Full_Partial__c.field-meta.xml
<CustomField>
    <fullName>Full_Partial__c</fullName>
    <label>Full/Partial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>