force-app/main/default/objects/Contact/fields/Heart_Place__c.field-meta.xml
<CustomField>
    <fullName>Heart_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heart Place</label>
    <type>Checkbox</type>
</CustomField>