force-app/main/default/objects/Contact/fields/Help_you_achieve_plans_goals__c.field-meta.xml
<CustomField>
    <fullName>Help_you_achieve_plans_goals__c</fullName>
    <label>Help you achieve plans/goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>