force-app/main/default/objects/Contact/fields/historical_europe_certified__c.field-meta.xml
<CustomField>
    <fullName>historical_europe_certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Europe Certified</label>
    <type>Checkbox</type>
</CustomField>