force-app/main/default/objects/Contact/fields/How_did_you_hear_about_Prosci__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Prosci__c</fullName>
    <label>How did you hear about Prosci</label>
    <type>TextArea</type>
</CustomField>