force-app/main/default/objects/Contact/fields/I_need_Advisory_Statements__c.field-meta.xml
<CustomField>
    <fullName>I_need_Advisory_Statements__c</fullName>
    <label>I need...(Advisory Statements)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To accelerate change management capability</fullName>
            </value>
            <value>
                <fullName>To build an enterprise change management strategy</fullName>
            </value>
            <value>
                <fullName>Support delivering on a must-win project</fullName>
            </value>
            <value>
                <fullName>Support building change capability</fullName>
            </value>
            <value>
                <fullName>To integrate change management with other disciplines</fullName>
            </value>
            <value>
                <fullName>To measure the impact of change</fullName>
            </value>
            <value>
                <fullName>To better manage my change portfolio</fullName>
            </value>
            <value>
                <fullName>I need guidance from Prosci</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>