force-app/main/default/objects/Contact/fields/Inactive_TTT_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Inactive_TTT_Campaign__c</fullName>
    <description>What discount type was chosen when the TTT Survey was filled out.</description>
    <inlineHelpText>Select the option the contact choose on their survey and an email with the code will be sent to them.</inlineHelpText>
    <label>Inactive TTT Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free Resource Bundle</fullName>
            </value>
            <value>
                <fullName>MAP Discount</fullName>
            </value>
            <value>
                <fullName>Certification Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>