force-app/main/default/objects/Contact/fields/Individual_or_Company_Payment__c.field-meta.xml
<CustomField>
    <fullName>Individual_or_Company_Payment__c</fullName>
    <label>Individual or Company Payment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Payment</fullName>
            </value>
            <value>
                <fullName>Company Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>