force-app/main/default/objects/Contact/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <formula>TEXT(Account.Industry__c)</formula>
    <label>industry</label>
    <type>Text</type>
</CustomField>