force-app/main/default/objects/Contact/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Butch</fullName>
            </value>
            <value>
                <fullName>Jim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>