force-app/main/default/objects/Contact/fields/Instructor_Bio__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Bio__c</fullName>
    <label>Instructor Bio</label>
    <type>Url</type>
</CustomField>