force-app/main/default/objects/Contact/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <label>Instructor Type</label>
    <type>TextArea</type>
</CustomField>