force-app/main/default/objects/Contact/fields/iSell__Avention_ID__c.field-meta.xml
<CustomField>
    <fullName>iSell__Avention_ID__c</fullName>
    <description>Unique contact identifier (not currently implemented).</description>
    <label>D&amp;B Contact ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>