force-app/main/default/objects/Contact/fields/Job_Level_Other__c.field-meta.xml
<CustomField>
    <fullName>Job_Level_Other__c</fullName>
    <description>This field is mapped to Hubspot</description>
    <label>Job Level Other</label>
    <length>150</length>
    <type>Text</type>
</CustomField>