force-app/main/default/objects/Contact/fields/Job_Role_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_Function__c</fullName>
    <label>Job Role / Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Management</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Continuous Improvement and Innovation</fullName>
            </value>
            <value>
                <fullName>Customer Relations, Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Finance and Administration</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Senior Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>