force-app/main/default/objects/Contact/fields/Leader_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Leader_First_Name__c</fullName>
    <label>Leader First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>