force-app/main/default/objects/Contact/fields/Leader_Title__c.field-meta.xml
<CustomField>
    <fullName>Leader_Title__c</fullName>
    <label>Leader Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>