force-app/main/default/objects/Contact/fields/legacy_hub_spot_contact_id__c.field-meta.xml
<CustomField>
    <fullName>legacy_hub_spot_contact_id__c</fullName>
    <label>Legacy HubSpot Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>