force-app/main/default/objects/Contact/fields/License_Holder_Community_Member__c.field-meta.xml
<CustomField>
    <fullName>License_Holder_Community_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this to update the email list membership for License holders. A checked box in Salesforce will translate to a &quot;YES&quot; in HubSpot and those contacts will receive the monthly LHC email invite through HubSpot.</inlineHelpText>
    <label>License Holder Community Member</label>
    <type>Checkbox</type>
</CustomField>