force-app/main/default/objects/Contact/fields/Manager_on_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Manager_on_User_Profile__c</fullName>
    <formula>pse__Salesforce_User__r.Manager.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager on User Profile</label>
    <type>Text</type>
</CustomField>