force-app/main/default/objects/Contact/fields/Meet_90_day_requirement__c.field-meta.xml
<CustomField>
    <fullName>Meet_90_day_requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used to identify when the TTT grad has facilitated a class within 90 days of graduation.</inlineHelpText>
    <label>Meet 90 day requirement</label>
    <type>Checkbox</type>
</CustomField>