force-app/main/default/objects/Contact/fields/Meeting_days_times__c.field-meta.xml
<CustomField>
    <fullName>Meeting_days_times__c</fullName>
    <description>This field is mapped to Hubspot</description>
    <label>Meeting days times</label>
    <length>150</length>
    <type>Text</type>
</CustomField>