force-app/main/default/objects/Contact/fields/MQL_Type__c.field-meta.xml
<CustomField>
    <fullName>MQL_Type__c</fullName>
    <label>MQL - Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form Submission</fullName>
            </value>
            <value>
                <fullName>Lead Scoring Model</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>