force-app/main/default/objects/Contact/fields/Name_on_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Certificate__c</fullName>
    <label>Name on Certificate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>