force-app/main/default/objects/Contact/fields/NAV_Customer__c.field-meta.xml
<CustomField>
    <fullName>NAV_Customer__c</fullName>
    <label>NAV Customer #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>