force-app/main/default/objects/Contact/fields/No_of_Training_Records__c.field-meta.xml
<CustomField>
    <fullName>No_of_Training_Records__c</fullName>
    <label>No. of Training Records</label>
    <summaryForeignKey>Associated_Training_Contacts__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>