force-app/main/default/objects/Contact/fields/of_Participants__c.field-meta.xml
<CustomField>
    <fullName>of_Participants__c</fullName>
    <label># of Participants</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>5-9</fullName>
            </value>
            <value>
                <fullName>10+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>