force-app/main/default/objects/Contact/fields/of_your_time_will_be_focused_on_CM__c.field-meta.xml
<CustomField>
    <fullName>of_your_time_will_be_focused_on_CM__c</fullName>
    <label>% of your time will be focused on CM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 25%</fullName>
            </value>
            <value>
                <fullName>26% - 50%</fullName>
            </value>
            <value>
                <fullName>51% - 75%</fullName>
            </value>
            <value>
                <fullName>76% - 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>