force-app/main/default/objects/Contact/fields/Opportunity_Lead_Source_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lead_Source_2__c</fullName>
    <label>Opportunity Lead Source 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>