force-app/main/default/objects/Contact/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Client Services</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
                <isActive>false</isActive>
                <label>Organic Search</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>