force-app/main/default/objects/Contact/fields/Original_Source_Drill_Down_2__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Drill_Down_2__c</fullName>
    <label>Original Source - Drill Down 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>