force-app/main/default/objects/Contact/fields/P_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>P_Account_Manager__c</fullName>
    <formula>Account.P_Account_Manager__r.FirstName + &quot; &quot; +  Account.P_Account_Manager__r.P_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>