force-app/main/default/objects/Contact/fields/P_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>P_Certification_Date__c</fullName>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>