force-app/main/default/objects/Contact/fields/P_Contact_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>P_Contact_Primary_Phone__c</fullName>
    <label>Contact Primary Phone</label>
    <type>Phone</type>
</CustomField>