force-app/main/default/objects/Contact/fields/P_Prosci_Certified_Instructor__c.field-meta.xml
<CustomField>
    <fullName>P_Prosci_Certified_Instructor__c</fullName>
    <label>Prosci Certified Instructor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>