force-app/main/default/objects/Contact/fields/P_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>P_Secondary_Email__c</fullName>
    <label>Secondary Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>