force-app/main/default/objects/Contact/fields/P_TTT__c.field-meta.xml
<CustomField>
    <fullName>P_TTT__c</fullName>
    <label>TTT_P</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>