force-app/main/default/objects/Contact/fields/P_TTT_Date__c.field-meta.xml
<CustomField>
    <fullName>P_TTT_Date__c</fullName>
    <label>TTT Date</label>
    <type>Date</type>
</CustomField>