force-app/main/default/objects/Contact/fields/Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Code__c</fullName>
    <inlineHelpText>Payment Code = Yes</inlineHelpText>
    <label>Payment Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>