force-app/main/default/objects/Contact/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>redit Card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>EFT/Invoice</fullName>
            </value>
            <value>
                <fullName>For visit (bank transfer): R$10,000.00</fullName>
            </value>
            <value>
                <fullName>Upon visit (credit card - 1 payment): R$10,000.00</fullName>
            </value>
            <value>
                <fullName>Installments (credit card): R$10,500.00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>