force-app/main/default/objects/Contact/fields/PCAI_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>PCAI_Effective_Date__c</fullName>
    <label>PCAI Effective Date</label>
    <type>Date</type>
</CustomField>