force-app/main/default/objects/Contact/fields/PCAI_enrollment_date__c.field-meta.xml
<CustomField>
    <fullName>PCAI_enrollment_date__c</fullName>
    <label>PCAI Enrollment date</label>
    <type>Date</type>
</CustomField>