force-app/main/default/objects/Contact/fields/PCAI_recert_date__c.field-meta.xml
<CustomField>
    <fullName>PCAI_recert_date__c</fullName>
    <inlineHelpText>Date the person needs to be re-certificated, if expired see a Program Advisor</inlineHelpText>
    <label>PCAI Recert date</label>
    <type>Date</type>
</CustomField>