force-app/main/default/objects/Contact/fields/PCAI_VILT_Review__c.field-meta.xml
<CustomField>
    <fullName>PCAI_VILT_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to indicate whether the person has completed VILT onboarding review with a program advisor. The filed needs to be &quot;ticked&quot; when the action is completed.</inlineHelpText>
    <label>PCAI VILT Review</label>
    <type>Checkbox</type>
</CustomField>