force-app/main/default/objects/Contact/fields/Phone_Number_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Extension__c</fullName>
    <label>Phone Number Extension</label>
    <length>15</length>
    <type>Text</type>
</CustomField>