force-app/main/default/objects/Contact/fields/Plans_Goals_with_CM_and_Prosci__c.field-meta.xml
<CustomField>
    <fullName>Plans_Goals_with_CM_and_Prosci__c</fullName>
    <label>Plans/Goals with CM and Prosci</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>