force-app/main/default/objects/Contact/fields/PLI_Notes__c.field-meta.xml
<CustomField>
    <fullName>PLI_Notes__c</fullName>
    <label>PLI Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>