force-app/main/default/objects/Contact/fields/Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Access</label>
    <referenceTo>Portal_Access__c</referenceTo>
    <relationshipLabel>Contact</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>