force-app/main/default/objects/Contact/fields/Previous_Manager__c.field-meta.xml
<CustomField>
    <fullName>Previous_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Previous Manager)</relationshipLabel>
    <relationshipName>Contacts2</relationshipName>
    <type>Lookup</type>
</CustomField>