force-app/main/default/objects/Contact/fields/Program_Title__c.field-meta.xml
<CustomField>
    <fullName>Program_Title__c</fullName>
    <label>Program Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification, Min 8 / Max 18 Participants</fullName>
            </value>
            <value>
                <fullName>Change Management Sponsor Briefing, Min 5 / Max 15 Participants</fullName>
            </value>
            <value>
                <fullName>Delivering Project Results Workshop, Min 10 / Max 24 Participants</fullName>
            </value>
            <value>
                <fullName>Methodology Application Program (MAP), Min 8 / Max 18 Participants</fullName>
            </value>
            <value>
                <fullName>Train-the-Trainer, Min 6 / Max 8 Participants</fullName>
            </value>
            <value>
                <fullName>Taking Charge of Change, Min 8 / Max 20 Participants</fullName>
            </value>
            <value>
                <fullName>Leading Your Team Through Change, Min 10 / Max 20 Participants</fullName>
            </value>
            <value>
                <fullName>ECM Boot Camp, Min 6 / Max 8 Participants</fullName>
            </value>
            <value>
                <fullName>Change Management Employee Orientation, Min 15 / Max 24 Participants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>