force-app/main/default/objects/Contact/fields/Prosci_AI_Chat_Solution__c.field-meta.xml
<CustomField>
    <fullName>Prosci_AI_Chat_Solution__c</fullName>
    <label>Prosci AI Chat Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prosci_Kaiya_AI_Tool</valueSetName>
    </valueSet>
</CustomField>