force-app/main/default/objects/Contact/fields/Prosci_Certified_Advanced_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Certified_Advanced_Instructor__c</fullName>
    <label>Prosci Certified Advanced Instructor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>