force-app/main/default/objects/Contact/fields/Prosci_Manager__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Manager__c</fullName>
    <formula>ReportsTo.FirstName &amp; &apos; &apos; &amp;  ReportsTo.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prosci Manager</label>
    <type>Text</type>
</CustomField>