force-app/main/default/objects/Contact/fields/pse__API_Resource_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__API_Resource_Correlation_Id__c</fullName>
    <externalId>true</externalId>
    <label>API Resource Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>